<resources>
    <string name="app_name">Traveler</string>
    <string name="action_remove">삭제</string>
    <string name="confirm">확인</string>
    <string name="doYouWantToDelete">삭제하시겠습니까?</string>
    <string name="yes">예</string>
    <string name="no">아니오</string>
    <string name="startDate">시작일</string>
    <string name="endDate">끝날</string>
    <string name="btnSearch">찾기</string>
    <string name="destination">목적지</string>
    <string name="howMany">인원수</string>
    <string name="cancel">취소</string>
    <string name="save">저장</string>
    <string name="action_create">생성</string>
    <string name="Username">Username</string>
    <string name="Password">Password</string>
    <string name="forgot_your_password">Forgot your password ?</string>
    <string name="go">GO</string>
    <string name="repeat_password">Repeat Password</string>
    <string name="next">NEXT</string>
    <string name="register">REGISTER</string>
    <string name="et_nickname">yourname</string>
    <string name="login">로그인</string>
    <string name="btn_join">회원가입</string>
</resources>